--- a/index.html
+++ b/index.html
@@ -5,10 +5,141 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pet Store</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/fontawesome.min.css">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+	<header class="container">
+		<div class="flex-wrapper">
+			<div class="row">
+				<div class="col-xs-8 col-sm-4 col-md-6">
+					<a href="index.html">
+						<img src="img/petstore_logo.png" alt="Pet Store Logo" id="header-logo">
+						<h1 id="logo-style" class="pull-left">Pet Store</h1>
+					</a>
+				</div>
+				<!--NAVIGATION BEGINS-->
+				<nav class="col-xs-12 col-sm-8 col-md-6">
+					<ul class="nav nav-tabs pull-right">
+						<li role="presentation" class="active"><a href="index.html">Home</a></li>
+						<li role="presentation"><a href="#">Products</a></li>
+						<li role="presentation"><a href="#">Contact Us</a></li>
+					</ul>
+				</nav>
+				<!--NAVIGATION ENDS-->
+			</div>
+			<!--HEADER ROW ENDS HERE-->
+		</div> <!--flex ends-->
+	</header>
+	<div class="jumbotron">
+		<div class="container">
+			<div class="text-center text-uppercase">
+				<h2>the products they love. the prices that you like.</h2>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-7">
+				<div class="row">
+					<div class="col-md-12">
+						<h1 id="featured-title" class="text-uppercase">featured</h1>
+						<p id="featured-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque ullam voluptate sequi quibusdam ipsa, iure laudantium dignissimos aperiam, ut nisi, beatae architecto quia quaerat explicabo! Non optio placeat, nulla dolore!</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-4">
+						<div class="row thumb-background">
+						  <div class="col-xs-6 col-sm-12">
+						  	<img src="img/product1.jpg" alt="Dog Bowl" class="img-responsive">
+								<div class="caption">
+						    	<h3>Dog Bowl</h3>
+						      <p class="text-justify">The best bowl for your dog.</p>
+						      <button class="btn btn-info btn-xs" role="button">Purchase Now</button>
+					      </div>
+					    </div>
+					</div>
 
+				</div>
+				<div class="col-md-4"> <!--CAT TOYS SECTION BEGINS-->
+					<div class="row thumb-background">
+						<div class="col-xs-6 col-sm-12">
+							<img src="img/product2.jpg" alt="Cat Toys" class="img-responsive">
+							<div class="caption">
+								<h3>Cat Toy</h3>
+								<p class="text-justify">The best cat toy for your favorite cat.</p>
+								<button class="btn btn-info btn-xs" role="button">Purchase Now</button>
+							</div>
+						</div>
+
+					</div>
+				</div>
+				<div class="col-md-4"> <!--CAT TOYS SECTION BEGINS-->
+					<div class="row thumb-background">
+						<div class="col-xs-6 col-sm-12">
+							<img src="img/product3.jpg" alt="Cat Toys" class="img-responsive">
+							<div class="caption">
+								<h3>Parrot Stuff</h3>
+								<p class="text-justify">The best parrot stuff for your parrot.</p>
+								<button class="btn btn-info btn-xs" role="button">Purchase Now</button>
+							</div>
+						</div>
+
+					</div>
+				</div>
+
+			</div>
+
+		</div>
+		<div class="col-md-4 col-md-offset-1 text-center"><!--SERVICES SECTION STARTS-->
+			<h1 class="text-uppercase">services</h1>
+			<ul class="nav nav-pills nav-stacked">
+				<li role="presentation">
+					<a href="#">Adopt A Dog</a>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+				</li>
+				<li role="presentation">
+					<a href="#">Adopt A Cat</a>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+				</li>
+				<li role="presentation">
+					<a href="#">Adopt A Fish</a>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+				</li>
+			</ul>
+		</div>
+	</div>
+</div>
+<footer class="container-fluid">
+	<div class="container">
+		<div class=row>
+			<div class="col-sm-3 right-border"><!--FOOTER LOGO BEGINS-->
+				<img src="img/petstore_logo.png" alt="Pet Store Logo" class="img-responsive" id="footer-logo">
+			</div><!--FOOTER LOGO ENDS-->
+			<div class="col-sm-3 right-border"><!--FOOTER ADDRESS BEGINS-->
+				<address>
+					<a href="#">
+						Pet Store<br />
+						Fresno, CA <br />
+					</a>
+					<a href="mailto:info@petstore.com">info@petstore.com</a>
+				</address>
+			</div><!--FOOTER ADDRESS ENDS-->
+			<div class="col-sm-3">
+				<p><i class="fa fa-twitter" aria-hidden="true"></i>Twitter</p>
+				<p><i class="fa fa-facebook" aria-hidden="true"></i>Facebook</p>
+				<p><i class="fa fa-linkedin" aria-hidden="true"></i>Linkedin</p>
+			</div>
+			</div>
+
+		<div class="row">
+			<div class="col-xs-12 text-center">
+				<p>&copy; Pet Store, Inc. All rights reserved.</p>
+			</div>
+
+		</div>
+	</div>
+</footer>
 	<!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
